tests/fixtures/invalid/pow_int_none_list.py
# Cannot call pow() with Int, None, List[int]
x = pow(1, None, [1, 2, 3])
